<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ma_photo"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/first_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ma_photo"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:text="@string/exp"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:text="@string/exp"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_language"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:text="@string/exp"
                android:layout_weight="1"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_ll"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/rating"
                android:layout_weight="1"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/duration"
                android:layout_weight="1"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/language"
                android:layout_weight="1"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:layout_below="@+id/second_ll"
            android:textColor="@color/darkgrey"/>

        <TextView
            android:id="@+id/ma_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/lorem"
            android:textSize="16sp"
            android:layout_below="@+id/description"/>
    </RelativeLayout>



</ScrollView>